--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>React Router</title>
+    <title>React DnD Example</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <style type="text/css">
         #root{
